<resources>
    <string name="app_name">Medical Box</string>
    <string name="no_fields">Missing fields</string>

    <string name="url_login">https://api.admin.medicalbox.online/api/auth/signin</string>
    <string name="url_register">https://api.admin.medicalbox.online/api/auth/signup</string>
    <string name="url_getdata">https://api.admin.medicalbox.online/api/chunk/query</string>
    <string name="url_getdoctors">https://api.admin.medicalbox.online/api/doctor/list</string>
    <string name="url_senddata">https://api.admin.medicalbox.online/api/chunk/upload</string>
    <string name="canceled_request">Request canceled</string>
    <string name="choose_doctor">Current doctor: </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="home_icon">home icon</string>
    <string name="choose_a_doctor">Choose a doctor</string>
    <string name="your_measurements">Your measurements</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="already_registered_login_here">Already registered? Login here</string>
    <string name="blackboxmed">BlackBoxMed</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered_do_it_here">Not registered? Do it here!</string>
    <string name="type_all_lowercase">Type (all lowercase)</string>
    <string name="value">Value</string>
    <string name="units_all_lowercase">Units (all lowercase)</string>
    <string name="date_yyyy_mm_dd">Date</string>
    <string name="time_hh_mm">Time</string>
    <string name="add">Add</string>
    <string name="input_err_num">Value input should be a number</string>
    <string name="input_err_time">Invalid time format, HH:mm</string>
    <string name="input_err_date">Invalid date format, yyyy-mm-dd</string>
    <string name="input_err_fields">Please fill all the fields</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
