...
                android:layout_alignBottom="@+id/measures_list"
                android:layout_alignEnd="@+id/measures_list"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_upload" />

            <ImageButton
                android:id="@+id/btnAddMeasure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/measures_list"
                android:layout_alignStart="@+id/measures_list"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
...
